# agent-observer

./: README.md  pyproject.toml
examples/: sample_dialogue.txt  sample_dialogue_ru.txt
observer/: main.py  metrics.py  parser.py  report.py
